# Penpals-WebApp

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
conversations/: admin.py  forms.py  models.py  urls.py  views.py
conversations/migrations/: 0001_initial.py
conversations/templates/conversations/: chatbox.html  inbox.html
penpalpages/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
penpalpages/migrations/: 0001_initial.py  0002_friendrequest.py
penpalpages/templates/penpalpages/: edit.html  index.html  login.html  profile.html  register.html
penpals/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: styles.css
templates/penpalpages/: base.html
templates/penpalpages/includes/: sidebar.html
